--- a/.github/workflows/Redmi-AX6000-hanwckf.yml
+++ b/.github/workflows/Redmi-AX6000-hanwckf.yml
@@ -138,19 +138,23 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "release_tag=${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}" >> $GITHUB_OUTPUT
-        touch release.txt
-        echo "由衷感谢所有为openwrt无私奉献的大佬们" >> release.txt
-        echo "📥 固件下载" >> release.txt
+        r='<div>🎉🎉🎉🎉🎉🎉🎉🎉</div>'
+        echo release_tag=${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}"
+        r=$r$release_tag
+        r=$r"由衷感谢所有为openwrt无私奉献的大佬们"
+        r=$r"📥 固件下载"
+        echo "::set-output name=RELEASE_BODY::$r"
         echo "status=success" >> $GITHUB_OUTPUT
         
     - name: 发布至release
-      uses: softprops/action-gh-release@v1
+      uses: svenstaro/upload-release-action@v2
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        files: ${{ env.FIRMWARE }}/*
-        name: ${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}
-        tag_name: ${{ steps.tag.outputs.release_tag }}
-        body_path: release.txt
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        body: ${{ steps.tag.outputs.RELEASE_BODY }}
+        file: ${{ env.FIRMWARE }}/*
+        file_glob: true
+        tag: ${{ steps.tag.outputs.release_tag }}
+        overwrite: true
