--- a/.github/workflows/Redmi-AX6000-hanwckf.yml
+++ b/.github/workflows/Redmi-AX6000-hanwckf.yml
@@ -138,23 +138,32 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        r='<div>🎉🎉🎉🎉🎉🎉🎉🎉</div>'
-        echo release_tag=${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}"
-        r=$r$release_tag
-        r=$r"由衷感谢所有为openwrt无私奉献的大佬们"
-        r=$r"📥 固件下载"
-        echo "::set-output name=RELEASE_BODY::$r"
+        #r='<div>🎉🎉🎉🎉🎉🎉🎉🎉</div>'
+        #echo release_tag=${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}"
+        #r=$r$release_tag
+        #r=$r"由衷感谢所有为openwrt无私奉献的大佬们"
+        #r=$r"📥 固件下载"
+        #echo "::set-output name=RELEASE_BODY::$r"
+        echo "::set-output name=release_tag::${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}"
+        touch release.txt
+        echo "🎉🎉🎉🎉🎉🎉🎉🎉" >> release.txt
+        echo "由衷感谢所有为openwrt无私奉献的大佬们" >> release.txt
+        echo "📥 固件下载" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
         
     - name: 发布至release
-      uses: svenstaro/upload-release-action@v2
+      #uses: svenstaro/upload-release-action@v2
+      uses: softprops/action-gh-release@v1
       if: steps.tag.outputs.status == 'success' && !cancelled()
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        body: ${{ steps.tag.outputs.RELEASE_BODY }}
-        file: ${{ env.FIRMWARE }}/*
-        file_glob: true
-        tag: ${{ steps.tag.outputs.release_tag }}
+        tag_name: ${{ steps.tag.outputs.release_tag }}
+        body_path: release.txt
+        files: ${{ env.FIRMWARE }}/*
+        #repo_token: ${{ secrets.GITHUB_TOKEN }}
+        #body: ${{ steps.tag.outputs.RELEASE_BODY }}
+        #file: ${{ env.FIRMWARE }}/*
+        #file_glob: true
+        #tag: ${{ steps.tag.outputs.release_tag }}
         overwrite: true
