--- a/hanwckf/Redmi-AX6000/.config
+++ b/hanwckf/Redmi-AX6000/.config
@@ -13,6 +13,15 @@ CONFIG_PACKAGE_luci-compat=y
 ## LuCI->Applications
 ## 阿里云WebDAV
 CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+CONFIG_PACKAGE_luci-app-mosdns=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-guest-wifi=y
+CONFIG_PACKAGE_luci-app-netdata=y
+CONFIG_PACKAGE_luci-app-openvpn-server=y
+CONFIG_PACKAGE_luci-app-wifischedule=y
+CONFIG_PACKAGE_luci-app-wrtbwmon=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+
 ## -----------自己加的第三方插件源  END------------
 
 ## LuCI->Applications
