--- a/.github/workflows/Redmi-AX6000-hanwckf.yml
+++ b/.github/workflows/Redmi-AX6000-hanwckf.yml
@@ -21,6 +21,11 @@ on:
 #  schedule:
 #    - cron: 0 16 * * *
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
 env:
   REPO_URL: https://github.com/hanwckf/immortalwrt-mt798x
   REPO_BRANCH: openwrt-21.02
