--- a/.github/workflows/Redmi-AX6000-padavanonly.yml
+++ b/.github/workflows/Redmi-AX6000-padavanonly.yml
@@ -21,6 +21,11 @@ on:
 #  schedule:
 #    - cron: 0 16 * * *
 
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+  
 env:
   REPO_URL: https://github.com/lgs2007m/immortalwrtARM
   REPO_BRANCH: mt7986
@@ -99,6 +104,10 @@ jobs:
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
         
+    - name: Add Custom Settings
+      run: |
+        cp -rf settings/* ./openwrt/
+        
     - name: 编译固件
       id: compile
       run: |
@@ -140,6 +149,7 @@ jobs:
       run: |
         echo "release_tag=${{ env.FILE_DATE }}-${{ env.OPENWRT_NAME }}-${{ env.DEVICE_NAME }}" >> $GITHUB_OUTPUT
         touch release.txt
+        echo "🎉🎉🎉🎉🎉🎉🎉🎉" >> release.txt
         echo "由衷感谢所有为openwrt无私奉献的大佬们" >> release.txt
         echo "📥 固件下载" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
