--- a/.github/workflows/Redmi-AX6000-padavanonly.yml
+++ b/.github/workflows/Redmi-AX6000-padavanonly.yml
@@ -60,6 +60,8 @@ jobs:
         curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh | sudo bash
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
+        sudo mkdir -p /workdir
+        sudo chown $USER:$GROUPS /workdir
         
     - name: 下载固件源码
       working-directory: /workdir
