--- a/.github/workflows/Redmi-AX6000-padavanonly.yml
+++ b/.github/workflows/Redmi-AX6000-padavanonly.yml
@@ -142,11 +142,12 @@ jobs:
       
     - name: Zip files
       run: |
+        cd $GITHUB_WORKSPACE
         mkdir upload_files
         cd openwrt/bin
-        tar -zcvf ../../upload_files/packages_${{ env.FILE_DATE }}.tar.gz packages
-        tar -zcvf ../../upload_files/targets_${{ env.FILE_DATE }}.tar.gz targets
-        cp -rf targets/* ../../upload_files
+        tar -zcvf $GITHUB_WORKSPACE/upload_files/upload_files/packages_${{ env.FILE_DATE }}.tar.gz packages
+        tar -zcvf $GITHUB_WORKSPACE/upload_files/upload_files/targets_${{ env.FILE_DATE }}.tar.gz targets
+        cp -rf targets/* $GITHUB_WORKSPACE/upload_files/upload_files
         cd $GITHUB_WORKSPACE/upload_files
         echo "UPLOADFILES=$PWD" >> $GITHUB_ENV
         
@@ -199,6 +200,8 @@ jobs:
         echo "🎉🎉🎉🎉🎉🎉🎉🎉" >> release.txt
         echo "由衷感谢所有为openwrt无私奉献的大佬们" >> release.txt
         echo "📥 固件下载" >> release.txt
+        [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
+        [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
         echo "status=success" >> $GITHUB_OUTPUT
         
     - name: 发布至release
