--- a/hanwckf/Redmi-AX6000/.config
+++ b/hanwckf/Redmi-AX6000/.config
@@ -46,6 +46,8 @@ CONFIG_PACKAGE_ddns-scripts-dnspod=y
 CONFIG_PACKAGE_luci-app-openclash=y
 ## PassWall
 CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=n
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=n
 
 ## Administration
 CONFIG_PACKAGE_htop=y
