--- a/padavanonly/Redmi-AX6000/.config
+++ b/padavanonly/Redmi-AX6000/.config
@@ -45,6 +45,8 @@ CONFIG_PACKAGE_ddns-scripts_dnspod=y
 CONFIG_PACKAGE_luci-app-openclash=y
 ## PassWall
 CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=n
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=n
 
 ## Administration
 ## htop进程查看器
