--- a/.github/workflows/Redmi-AX6000-hanwckf-test.yml
+++ b/.github/workflows/Redmi-AX6000-hanwckf-test.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 ###############改名字##############
-name: Redmi-AX6000-hanwckf
+name: Redmi-AX6000-hanwckf-test
 
 on:
   repository_dispatch:
